--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
   "scripts": {
     "start": "NODE_OPTIONS=--openssl-legacy-provider npm start",
     "build": "react-scripts build",
-    "deploy": "firebase deploy",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "deploy": "firebase deploy"
   },
   "eslintConfig": {
     "extends": [
