--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "react-rating": "^2.0.5",
     "react-router-dom": "5.3.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yarn": "^1.22.22"
   },
   "scripts": {
     "start": "NODE_OPTIONS=--openssl-legacy-provider npm start",
-    "build": "react-scripts build",
+    "build": "NODE_OPTIONS=--openssl-legacy-provider yarn build",
     "deploy": "firebase deploy"
   },
   "eslintConfig": {
@@ -38,3 +39,5 @@
     ]
   }
 }
+
+
